--- a/acc.html
+++ b/acc.html
@@ -10,63 +10,65 @@
     <link rel="stylesheet" type="text/css" href="./css/menu.css" />
   </head>
   <body>
-   
-      <div class="up">
-        <div class="side_nav">
-            <div class="rectangles">
-                <div class="window">
-                    <div class="photo"></div>
-                </div>
-                <div class="text">
-                    <a> Zhanna Povelitsa</a>
-                </div>
-            </div>
-            <div class="choices">
-                <div class="icons">
-                    <div class="my_profile"></div>
-                    <div class="purchases"></div>
-                    <div class="mess"></div>
-                    <div class="favourite"></div>
-                    <div class="friends"></div>
-                    <div class="messages"></div>
-                    <div class="spam"></div>
-                </div>
-                <div class="points">
-                    <div class="prof">
-                        <a>Мій профіль</a>
-                    </div>
-                    <div class="zam">
-                        <a>Замовлення</a>
-                    </div>
-                    <div class="pov">
-                        <a>Повідомлення</a>
-                    </div>
-                    <div class="fav">
-                        <a>Улюблене</a>
-                    </div>
-                    <div class="fri">
-                        <a>Друзі</a>
-                    </div>
-                    <div class="spov">
-                        <a>Сповіщення</a>
-                    </div>
-                    <div class="settings">
-                        <a>Налаштування</a>
-                    </div>
-                </div>
-            </div>
+    <div class="up">
+      <div class="side_nav">
+        <div class="rectangles">
+          <div class="window">
+            <div class="photo"></div>
+          </div>
+          <div class="text">
+            <a class="my_name"> Zhanna Povelitsa</a>
+          </div>
+        </div>
+        <nav class="choices">
+          <ul class="icons">
+            <li class="my_profile"></li>
+            <li class="purchases"></li>
+            <li class="icons_blocks mess"></li>
+            <li class="icons_blocks favourite"></li>
+            <li class="icons_blocks friends"></li>
+            <li class="icons_blocks messages"></li>
+            <li class="icons_blocks spam"></li>
+          </ul>
+          <ul class="points">
+            <li class="text_myprofile">
+              <a href="#">Мій профіль</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Замовлення</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Повідомлення</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Улюблене</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Друзі</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Сповіщення</a>
+            </li>
+            <li class="text_myprofile">
+              <a href="#">Налаштування</a>
+            </li>
+          </ul>
+        </nav>
         <div class="close"></div>
       </div>
-      <div class="b">
+      <div class="block">
         <div class="close">
-            <div class="c" onclick="location.href='index.html'"></div>
+          <div class="cross" onclick="location.href='index.html'"></div>
         </div>
       </div>
     </div>
     <div class="navbar">
-        <div class="back"></div>
-        <div class="home"></div>
-        <div class="recent"></div>
-      </div>
+      <div class="panel_of_manage back"></div>
+      <div class="panel_of_manage home"></div>
+      <div class="panel_of_manage recent"></div>
+    </div>
   </body>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+  </style>
 </html>
