--- a/index.html
+++ b/index.html
@@ -17,66 +17,69 @@
           <a> Популярні тури</a>
         </div>
       </div>
-      <div class="news1" onclick="location.href='detail_page.html'">
-        <div class="placeholder1">
-          <div class="text1">
-            <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
+      <div class="news news1">
+        <div class="placeholder">
+          <div class="text">
+            <a href="./detail_page.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
           </div>
-          <div class="sharelike1">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
         </div>
       </div>
-      <div class="news2">
-        <div class="placeholder2">
-          <div class="text2">
-            <a>Дайвінг-тур "Таємниці Зміїного"</a>
+      <div class="news news2">
+        <div class="placeholder">
+          <div class="text">
+            <a href="#">Дайвінг-тур "Таємниці Зміїного"</a>
           </div>
-          <div class="sharelike2">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
         </div>
       </div>
-      <div class="news3">
-        <div class="placeholder3">
-          <div class="text3">
-            <a>Сафарі-тур “Гадяцький”"</a>
+      <div class="news news3">
+        <div class="placeholder">
+          <div class="text">
+            <a href="#">Сафарі-тур “Гадяцький”"</a>
           </div>
-          <div class="sharelike3">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
         </div>
       </div>
-      <div class="news4">
-        <div class="placeholder4">
-          <div class="text4">
-            <a>Майстер-клас “Ромський”</a>
+      <div class="news news4">
+        <div class="placeholder">
+          <div class="text">
+            <a href="#">Майстер-клас “Ромський”</a>
           </div>
-          <div class="sharelike4">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
         </div>
       </div>
-      <div class="news5">
-        <div class="placeholder5">
-          <div class="text5">
-            <a>Квест-тур “Київ за три дні”</a>
+      <div class="news news5">
+        <div class="placeholder">
+          <div class="text">
+            <a href="#">Квест-тур “Київ за три дні”</a>
           </div>
-          <div class="sharelike5">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
         </div>
       </div>
       <div class="navbar">
-        <div class="back"></div>
-        <div class="home"></div>
-        <div class="recent"></div>
+        <div class="panel_of_manage back"></div>
+        <div class="panel_of_manage home"></div>
+        <div class="panel_of_manage recent"></div>
       </div>
     </div>
   </body>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </html>
