--- a/detail_page.html
+++ b/detail_page.html
@@ -25,7 +25,7 @@
           <div class="text1">
             <a></a>
           </div>
-          <div class="sharelike1">
+          <div class="share_like">
             <div class="like"></div>
             <div class="share"></div>
           </div>
@@ -47,7 +47,7 @@
         <div class="man">
           <div class="man_photo"></div>
           <div class="man_mess">
-            <a class="text_mess1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            <a class="text_mess">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna wirl aliqua.
               Up exlaborum incididunt quis nostrud exercitatn.
             </a>
@@ -56,7 +56,7 @@
         <div class="woman">
           <div class="woman_photo"></div>
           <div class="woman_mess">
-            <a class="text_mess2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
+            <a class="text_mess">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
           </div>
         </div>
       </div>
@@ -79,10 +79,13 @@
       </div>
       <button class="booking">ЗАБРОНЮВАТИ</button>
       <div class="navbar">
-        <div class="back"></div>
-        <div class="home"></div>
-        <div class="recent"></div>
+        <div class="panel_of_manage back"></div>
+        <div class="panel_of_manage home"></div>
+        <div class="panel_of_manage recent"></div>
       </div>
     </div>
   </body>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </html>
