change of mySidenav

--- a/index.html
+++ b/index.html
@@ -12,19 +12,43 @@
   <header>
     <!-- Бокове меню узято з https://www.w3schools.com/howto/howto_js_sidenav.asp -->
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
 
       <div class="header-content">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a>
+        <div class="name">Ганна Демьяненко </div>
         <img class="image-bottom" src="img\Pattern.png" alt="Background" />
         <img class="image-top" src="img\Avatar.png" alt="Avatar" />
-        <div class="menu-items">
+        <div class="menu-item">
+          <img src="img/Vector.jpg" alt="Icon" class="icon">
           <a href="#">Мій профіль</a>
-          <a href="#">Замовлення</a>
-          <a href="#">Друзі</a>
-          <a href="#">Налаштування</a>
         </div>
+        <div class="menu-item">
+          <img src="img/zamovlenya.jpg" alt="Icon" class="icon">
+          <a href="#">Замовлення</a>
+        </div>
+        <div class="menu-item">
+          <img src="img/massage.jpg" alt="Icon" class="icon">
+          <a href="#">Повідомлення</a>
+        </div>
+        <div class="menu-item">
+          <img src="img/Shape.jpg" alt="Icon" class="icon">
+          <a href="#">Улюблене</a> 
+        </div>
+        <div class="menu-item">
+          <img src="img/frends.jpg" alt="Icon" class="icon">
+          <a href="#">Друзі</a>
+        </div>
+        <div class="menu-item">
+          <img src="img/emeils.jpg" alt="Icon" class="icon">
+          <a href="#">Сповіщення</a>
+        </div>
+        <div class="menu-item">
+          <img src="img/settings.jpg" alt="Icon" class="icon">
+          <a href="#">Налаштування</a>
+        </div>   
+          <footer class="footer"></footer>
+        </div>     
       </div>
     </div>
 
@@ -53,7 +77,7 @@
             alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
           />
           <div class="tour-title">
-            Тур вихідного дня "Гостинність Чорнобіївки"
+            Тур вихідного дня "Гостинність Чорнобаївки"
             <div class="tour-actions">
               <a href="#"
                 ><img src="img/favorite.png" alt="Fav" class="action-icon"
