--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="tour-image">
           <img
             src="img/Тур вихідного дня “Гостинність Чорнобаївки”.png"
-            alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
+            alt="Тур вихідного дня 'Гостинність Чорнобaївки'"
           />
           <div class="tour-title">
             Тур вихідного дня "Гостинність Чорнобаївки"
@@ -205,8 +205,14 @@
           </p>
         </div>
         <h2>Наступна подія</h2>
-        <div class="event">15 травня 2022</div>
-        <div class="event">Кількість місць необмежена</div>
+        <div class="event">
+          <img src="img/Imported Layers.jpg" alt="Icon" class="icon">
+          <p>15 травня 2022</p>
+        </div>        
+        <div class="event">
+          <img src="img/frends.jpg" alt="Icon" class="icon">
+          <p>Кількість місць необмежена</p>
+        </div>
         <button class="reservButton">Забронювати</button>
       </div>
     </div>
