--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="main-container">
       <div class="navbar">
-        <div class="shape"></div>
+        <div class="shape" onclick="location.href='side.html'"></div>
         <div class="title">
           <a>Популярні тури</a>
         </div>
