--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <div class="news1 news">
         <div class="news1-title">
           <div class="news1-text">
-            <a href="./detail.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
+            <a href="./detail.html"
+              >Тур вихідного дня “Гостинність Чорнобаївки”</a
+            >
           </div>
           <div class="heart"></div>
           <div class="share"></div>
@@ -70,6 +72,6 @@
     </div>
   </body>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-    </style>
+    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+  </style>
 </html>
