--- a/side.html
+++ b/side.html
@@ -77,12 +77,12 @@
       <div class="side-wall">
         <div class="close" onclick="location.href='index.html'"></div>
       </div>
-      
-    </div><div class="android-menu-side">
-        <div class="back"></div>
-        <div class="home"></div>
-        <div class="recent"></div>
-      </div>
+    </div>
+    <div class="android-menu-side">
+      <div class="back"></div>
+      <div class="home"></div>
+      <div class="recent"></div>
+    </div>
   </body>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
