--- a/index.html
+++ b/index.html
@@ -10,20 +10,76 @@
 
 <body>
   <nav class="app-bar">
-    <button style="background-color: rgba(28,28,28,0)"><img src="/img/butt_menu.png" alt="button menu"
-        style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></button>
-    <h1>Популярні тури</h1>
+    <button style="background-color: rgba(28,28,28,0); border: none;"><a href="/modelWindow.html"><img
+          src="/img/butt_menu.png" alt="button menu"
+          style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a></button>
+    <h1 style="display: inline-block; padding-left: 20px;">Популярні тури</h1>
   </nav>
 
   <div class="main-info">
-    <img src="/img/1.png" alt="first news">
+
+    <div class="card">
+      <img src="/img/1.png" alt="first news" class="img-main">
+      <div class="content">
+        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність Чорнобаївки</a></h1>
+        <img src="./img/favourite.png" class="img-favourite-and-share">
+        <img src="./img/share.png" class="img-favourite-and-share">
+      </div>
+    </div>
+
+    <div class="card">
+    <img src="/img/2.png" alt="second news" class="img-main">
+      <div class="content">
+        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+        <img src="./img/favourite.png" class="img-favourite-and-share">
+        <img src="./img/share.png" class="img-favourite-and-share">
+      </div>
+    </div>
+    <div class="card">
+      <img src="/img/3.png" alt="three news" class="img-main">
+      <div class="content">
+        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+        <img src="./img/favourite.png" class="img-favourite-and-share">
+        <img src="./img/share.png" class="img-favourite-and-share">
+      </div>
+    </div>
+    <div class="card">
+      <img src="/img/4.png" alt="four news" class="img-main">
+      <div class="content">
+        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
+        <img src="./img/favourite.png" class="img-favourite-and-share">
+        <img src="./img/share.png" class="img-favourite-and-share">
+      </div>
+    </div>
+    <div class="card">
+      <img src="/img/5.png" alt="five news" class="img-main">
+      <div class="content">
+        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+        <img src="./img/favourite.png" class="img-favourite-and-share">
+        <img src="./img/share.png" class="img-favourite-and-share">
+      </div>
+    </div>
+
+
   </div>
 
-  <nav class="navbar"><img src="/img/back.png" alt="back" style="width: 15px; height: 17px; top: 1567px; left: 72px; border: 2px solid #eee;">
-    <img src="/img/home.png" alt="home" style="width: 16px; height: 16px; top: 1568px; left: 172px; border: 2px solid #eee;">
-    <img src="/img/recent.png" alt="recent" style="width: 16px; height: 16px; top: 1568px; left: 273px; border: 2px solid #eee;">
-  
-  </nav>
+<!--  <nav class="navbar">-->
 
+<!--    <div style="display: block; justify-content: center">-->
+
+<!--      <div style="display: inline-block; justify-content: start; padding-left: 72px">-->
+<!--      <img src="/img/back.png" alt="back" style="width: 15px; height: 17px; top: 1567px; left: 72px; display: flex; justify-content: center">-->
+<!--      </div>-->
+<!--      <div style="display: inline-block; text-align: center">-->
+<!--      <img src="/img/home.png" alt="home" style="width: 16px; height: 16px; top: 1568px; left: 172px;">-->
+<!--      </div>-->
+<!--      <div style="display: inline-block; justify-content: end; padding-right: 72px">-->
+<!--      <img src="/img/recent.png" alt="recent" style="width: 16px; height: 16px; top: 156px; left: 273px;">-->
+<!--      </div>-->
+
+<!--    </div>-->
+
+<!--  </nav>-->
 </body>
+
 </html>
