--- a/firstNews.html
+++ b/firstNews.html
@@ -7,10 +7,14 @@
 </head>
 <body>
 <nav class="app-bar">
-  <button style="background-color: rgba(28,28,28,0); border: none;"><a href="/modelWindow.html"><img
-    src="/img/butt_menu.png" alt="button menu"
-    style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a></button>
-  <h1 style="display: inline-block; padding-left: 20px;">Тур вихідного дня  </h1>
+
+  <div style="display: flex; padding-left: 10px ">
+  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 18px;
+  height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a>
+
+  <h1 style="display: inline-block; padding-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px">Тур вихідного дня "Гостинність Чорнобаївки</h1>
+  </div>
+
 </nav>
 
 <div class="main-info">
