--- a/firstNews.html
+++ b/firstNews.html
@@ -4,20 +4,36 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/detail.css">
 </head>
 <body>
 <nav class="app-bar">
 
-  <div style="display: flex; padding-left: 10px ">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 18px;
-  height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a>
 
-  <h1 style="display: inline-block; padding-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px">Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  </div>
-
+  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 24px;
+  height: 24px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
+  <h1
+    style="display: inline-block; padding-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px">
+    Тур вихідного дня "Гостинність Чорнобаївки</h1>
+  <img src="/img/settings.png" alt="button menu" style="width: 12px;
+  height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 <div class="main-info">
+  <div class="card">
+    <img src="/img/1.png" alt="first news" class="img-detail">
+    <div class="content-detail">
+      <img src="./img/favourite.png" class="img-favourite-details">
+      <img src="./img/share.png" class="img-share-details">
+    </div>
+  </div>
+
+  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit inventore natus
+    repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
+
+  <div class="hosts">
+  <h1 style="font-size: 18px">Відгуки</h1>
+  </div>
 
 </div>
 
