add next event and add button reserve

--- a/firstNews.html
+++ b/firstNews.html
@@ -19,7 +19,7 @@
   height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
-<div class="main-info">
+<div class="main-info-details">
   <div class="card">
     <img src="/img/1.png" alt="first news" class="img-detail">
     <div class="content-detail">
@@ -28,11 +28,27 @@
     </div>
   </div>
 
-  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit inventore natus
+  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit
+    inventore natus
     repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
 
   <div class="hosts">
-  <h1 style="font-size: 18px">Відгуки</h1>
+    <h1>Відгуки</h1>
+  </div>
+
+  <div>
+    <h1>Наступна подія</h1>
+    <div style="display: flex">
+      <img src="img/icon-date.png" class="icon-details">
+      <p><a href="" style="color: #6FB285; padding-left: 5px; text-decoration: none">15 травня 2022</a></p>
+    </div>
+    <div style="display: flex">
+      <img src="img/icon-people.png" class="icon-details">
+      <p><a href="" style="color: #6FB285; padding-left: 8px; text-decoration: none">Кількість місць необмежена</a></p>
+    </div>
+  </div>
+  <div class="container-button-reserve">
+    <button class="button-reserve">ЗАБРОНЮВАТИ</button>
   </div>
 
 </div>
