--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="card">
     <img src="/img/2.png" alt="second news" class="img-main">
       <div class="content">
-        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+        <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
         <img src="./img/favourite.png" class="img-favourite-and-share">
         <img src="./img/share.png" class="img-favourite-and-share">
       </div>
@@ -39,7 +39,7 @@
     <div class="card">
       <img src="/img/3.png" alt="three news" class="img-main">
       <div class="content">
-        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+        <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
         <img src="./img/favourite.png" class="img-favourite-and-share">
         <img src="./img/share.png" class="img-favourite-and-share">
       </div>
@@ -48,7 +48,7 @@
     <div class="card">
       <img src="/img/4.png" alt="four news" class="img-main">
       <div class="content">
-        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
+        <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
         <img src="./img/favourite.png" class="img-favourite-and-share">
         <img src="./img/share.png" class="img-favourite-and-share">
       </div>
@@ -57,7 +57,7 @@
     <div class="card">
       <img src="/img/5.png" alt="five news" class="img-main">
       <div class="content">
-        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+        <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
         <img src="./img/favourite.png" class="img-favourite-and-share">
         <img src="./img/share.png" class="img-favourite-and-share">
       </div>
