add reviews on all pages

--- a/fourNews.html
+++ b/fourNews.html
@@ -30,10 +30,26 @@
     inventore natus
     repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
 
-  <div class="hosts">
+  <div class="container-reviews">
     <h1>Відгуки</h1>
+    <div class="card-container">
+      <img src="img/user1.png" class="img-user">
+      <div class="comments-card">
+        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
+          eveniet explicabo, illum
+          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
+          necessitatibus
+          voluptatibus.</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <img src="img/user2.png" class="img-user">
+      <div class="comments-card">
+        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
+          eveniet explicabo, illum</p>
+      </div>
+    </div>
   </div>
-
   <div>
     <h1>Наступна подія</h1>
     <div style="display: flex">
