--- a/firstNews.html
+++ b/firstNews.html
@@ -7,17 +7,17 @@
   <link rel="stylesheet" type="text/css" href="/css/detail.css">
 </head>
 <body>
+
+
 <nav class="app-bar">
-
-
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 24px;
-  height: 24px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
-  <h1
-    style="display: inline-block; padding-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px">
+  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
+  <h1 class="title-news">
     Тур вихідного дня "Гостинність Чорнобаївки</h1>
   <img src="/img/settings.png" alt="button menu" style="width: 12px;
   height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
+
 
 <div class="main-info-details">
   <div class="card">
@@ -32,9 +32,30 @@
     inventore natus
     repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
 
-  <div class="hosts">
+  <div class="container-reviews">
     <h1>Відгуки</h1>
+    <div class="card-container">
+      <img src="img/user1.png" class="img-user">
+      <div class="comments-card">
+        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
+          eveniet explicabo, illum
+          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
+          necessitatibus
+          voluptatibus.</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <img src="img/user2.png" class="img-user">
+      <div class="comments-card">
+        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
+          eveniet explicabo, illum</p>
+      </div>
+    </div>
   </div>
+
+
+
+
 
   <div>
     <h1>Наступна подія</h1>
