--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <nav class="app-bar">
-    <button style="background-color: rgba(28,28,28,0); border: none;"><a href="/modelWindow.html"><img
+    <button style="background-color: rgba(28,28,28,0); border: none; margin-left: 15px"><a href="/modelWindow.html"><img
           src="/img/butt_menu.png" alt="button menu"
           style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a></button>
-    <h1 style="display: inline-block; padding-left: 20px;">Популярні тури</h1>
+    <h1 style="display: inline-block; padding-left: 20px;position: relative; top: 3px">Популярні тури</h1>
   </nav>
 
   <div class="main-info">
@@ -63,24 +63,6 @@
       </div>
     </div>
   </div>
-
-<!--  <nav class="navbar">-->
-
-<!--    <div style="display: block; justify-content: center">-->
-
-<!--      <div style="display: inline-block; justify-content: start; padding-left: 72px">-->
-<!--      <img src="/img/back.png" alt="back" style="width: 15px; height: 17px; top: 1567px; left: 72px; display: flex; justify-content: center">-->
-<!--      </div>-->
-<!--      <div style="display: inline-block; text-align: center">-->
-<!--      <img src="/img/home.png" alt="home" style="width: 16px; height: 16px; top: 1568px; left: 172px;">-->
-<!--      </div>-->
-<!--      <div style="display: inline-block; justify-content: end; padding-right: 72px">-->
-<!--      <img src="/img/recent.png" alt="recent" style="width: 16px; height: 16px; top: 156px; left: 273px;">-->
-<!--      </div>-->
-
-<!--    </div>-->
-
-<!--  </nav>-->
 </body>
 
 </html>
