--- a/secondNews.html
+++ b/secondNews.html
@@ -10,8 +10,7 @@
 <nav class="app-bar">
   <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
-  <h1
-    style="display: inline-block; padding-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px">
+  <h1 class="title-news">
     Тур вихідного дня "Гостинність Чорнобаївки</h1>
   <img src="/img/settings.png" alt="button menu" style="width: 12px;
   height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
