--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="./detail_page.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
           </div>
           <div class="share_like">
-            <div class="like"></div>
+            <div class="like" onclick="location.href='detail_page.html'"></div>
             <div class="share"></div>
           </div>
         </div>
