--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <main>
+        <div class="topHead">
+           <button class="menu"> <img src="img/menu.png" alt="1"></button>
+        <h2>Популярні тури</h2>
+    </div>
+    </main>
+
+    <div class="conteiner">
+        <div><img  class="amount" src="img/some_1.png" alt="1"></div>
+        <div><img  class="amount" src="img/some_2.jpg" alt="2"></div>
+        <div><img class="amount" src="img/some_3.jpg" alt="3"></div>
+    </div>
+
 </body>
+
 </html>
