--- a/index.html
+++ b/index.html
@@ -1,234 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=yes"
-    />
-    <title>PZ_1_4</title>
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
-  </head>
-  <header>
-    <!-- Бокове меню узято з https://www.w3schools.com/howto/howto_js_sidenav.asp -->
-    <div id="mySidenav" class="sidenav">
 
-      <div class="header-content">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a>
-        <div class="name">Ганна Демьяненко </div>
-        <img class="image-bottom" src="img\Pattern.png" alt="Background" />
-        <img class="image-top" src="img\Avatar.png" alt="Avatar" />
-        <div class="menu-item">
-          <img src="img/Vector.jpg" alt="Icon" class="icon">
-          <a href="#">Мій профіль</a>
-        </div>
-        <div class="menu-item">
-          <img src="img/zamovlenya.jpg" alt="Icon" class="icon">
-          <a href="#">Замовлення</a>
-        </div>
-        <div class="menu-item">
-          <img src="img/massage.jpg" alt="Icon" class="icon">
-          <a href="#">Повідомлення</a>
-        </div>
-        <div class="menu-item">
-          <img src="img/Shape.jpg" alt="Icon" class="icon">
-          <a href="#">Улюблене</a> 
-        </div>
-        <div class="menu-item">
-          <img src="img/frends.jpg" alt="Icon" class="icon">
-          <a href="#">Друзі</a>
-        </div>
-        <div class="menu-item">
-          <img src="img/emeils.jpg" alt="Icon" class="icon">
-          <a href="#">Сповіщення</a>
-        </div>
-        <div class="menu-item">
-          <img src="img/settings.jpg" alt="Icon" class="icon">
-          <a href="#">Налаштування</a>
-        </div>   
-          <footer class="footer"></footer>
-        </div>     
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  <title>PZ_1_4</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/burger_menu.css">
+</head>
+
+<body>
+<nav class="app-bar">
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
+
+    <ul id="menu">
+      <a href="#"><li>Home</li></a>
+      <a href="#"><li>About</li></a>
+      <a href="#"><li>Info</li></a>
+      <a href="#"><li>Contact</li></a>
+      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+    </ul>
+  </div>
+  <h1 class="general-title">Популярні тури</h1>
+</nav>
+
+<div class="main-info">
+
+  <div class="card">
+    <img src="./img/Тур вихідного дня “Гостинність Чорнобаївки”.png" alt="first news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність
+        Чорнобаївки</a></h1>
+      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
+  </div>
 
-    <script>
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-      }
-
-      /* Set the width of the side navigation to 0 */
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-      }
-    </script>
-    <div class="header">
-      <img src="img\menu.png" alt="menu" / onclick="openNav()"/>
-      <h1>Популярні тури</h1>
+  <div class="card">
+    <img src="./img/Дайвінг-тур Таємниці Зміїного.png" alt="second news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
-  </header>
+  </div>
 
-  <body>
-    <div class="main-content">
-      <div class="tour-card" onclick="openModal()">
-        <div class="tour-image">
-          <img
-            src="img/Тур вихідного дня “Гостинність Чорнобаївки”.png"
-            alt="Тур вихідного дня 'Гостинність Чорнобaївки'"
-          />
-          <div class="tour-title">
-            Тур вихідного дня "Гостинність Чорнобаївки"
-            <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="tour-card">
-        <div class="tour-image">
-          <img
-            src="img/Дайвінг-тур Таємниці Зміїного.png"
-            alt="Дайвінг-тур 'Таємниці Зміїного'"
-          />
-          <div class="tour-title">
-            Дайвінг-тур "Таємниці Зміїного"
-            <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="tour-card">
-        <div class="tour-image">
-          <img
-            src="img\Сафарі-тур “Гадяцький”.png"
-            alt="Сафарі-тур
-          'Гадяцький'"
-          />
-          <div class="tour-title">
-            Сафарі-тур “Гадяцький”
-            <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="tour-card">
-        <div class="tour-image">
-          <img
-            src="img/Майстер-клас “Ромський”.png"
-            alt="Майстер-клас 'Ромський'"
-          />
-          <div class="tour-title">
-            Майстер-клас “Ромський”
-            <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="card">
+    <img src="./img/Сафарі-тур “Гадяцький”.png" alt="three news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
-    <div id="myModal" class="modal">
-      <div class="modal-content">
-        <div class="header">
-          <h1>Тур вихідного дня “Гостинність Чорнобаївки”</h1>
-          <span class="close" onclick="closeModal()">&times;</span>
-        </div>
-        <div class="tour-image">
-          <img
-            src="img/Тур вихідного дня “Гостинність Чорнобаївки”.png"
-            alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
-          />
-          <div class="tour-title">
-            <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
-            </div>
-          </div>
-        </div>
+  </div>
 
-        <h3>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum
-          dictum augue. Fusce ultricies sit amet velit sit amet dictum. Aenean
-          iaculis ex dui, sed consectetur lectus ultrices ut. Mauris congue
-          iaculis felis ac ornare. Suspendisse potenti. Phasellus euismod,
-          libero quis venenatis tempus, magna ipsum rutrum tellus, vel rhoncus
-          nulla lacus id nibh. In blandit, turpis ut consequat pharetra, mi
-          magna consectetur arcu, eget sagittis tortor sapien ac nunc. Proin id
-          nunc ultricies, fermentum arcu non, dignissim lorem. Morbi ultrices
-          augue lacus, ut sodales est dignissim eget. Phasellus sed congue odio.
-          In aliquam ligula nec eros elementum pellentesque.
-        </h3>
-        <h2>Відгуки</h2>
-        <div class="review">
-          <img src="img\Oval.png" alt="reviewer" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up
-            exlaborum incididunt quis nostrud exercitatn.
-          </p>
-        </div>
-        <div class="review">
-          <img src="img\Oval (1).png" alt="reviewer" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum
-            dictum augue. Fusce ultricies sit amet velit sit amet dictum. Aenean
-            iaculis ex dui, sed consectetur lectus ultrices ut. Mauris congue
-            iaculis felis ac ornare.
-          </p>
-        </div>
-        <h2>Наступна подія</h2>
-        <div class="event">
-          <img src="img/Imported Layers.jpg" alt="Icon" class="icon">
-          <p>15 травня 2022</p>
-        </div>        
-        <div class="event">
-          <img src="img/frends.jpg" alt="Icon" class="icon">
-          <p>Кількість місць необмежена</p>
-        </div>
-        <button class="reservButton">Забронювати</button>
-      </div>
+  <div class="card">
+    <img src="./img/Майстер-клас “Ромський”.png" alt="four news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
+      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
-    <script>
-      function openModal() {
-        document.getElementById("myModal").style.display = "block";
-      }
+  </div>
 
-      function closeModal() {
-        document.getElementById("myModal").style.display = "none";
-      }
-      window.onclick = function (event) {
-        if (event.target == document.getElementById("myModal")) {
-          document.getElementById("myModal").style.display = "none";
-        }
-      };
-    </script>
-  </body>
+  <div class="card">
+    <img src="./img/Київ за 3 дні.png" alt="five news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/Shape.png" class="img-favourite-and-share">
+    </div>
+  </div>
+</div>
+</body>
+
 </html>
