changes in the burger

--- a/index.html
+++ b/index.html
@@ -17,13 +17,33 @@
     <span></span>
     <span></span>
 
+
     <ul id="menu">
-      <a href="#"><li>Home</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
-      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
-    </ul>
+      <div class="menu-item">
+        <img src="img/zamovlenya.jpg" alt="Icon" class="icon">
+        <a href="#">Замовлення</a>
+      </div>
+      <div class="menu-item">
+        <img src="img/massage.jpg" alt="Icon" class="icon">
+        <a href="#">Повідомлення</a>
+      </div>
+      <div class="menu-item">
+        <img src="img/Shape.jpg" alt="Icon" class="icon">
+        <a href="#">Улюблене</a> 
+      </div>
+      <div class="menu-item">
+        <img src="img/frends.jpg" alt="Icon" class="icon">
+        <a href="#">Друзі</a>
+      </div>
+      <div class="menu-item">
+        <img src="img/emeils.jpg" alt="Icon" class="icon">
+        <a href="#">Сповіщення</a>
+      </div>
+      <div class="menu-item">
+        <img src="img/settings.jpg" alt="Icon" class="icon">
+        <a href="#">Налаштування</a>
+      </div>   
+      </ul>
   </div>
   <h1 class="general-title">Популярні тури</h1>
 </nav>
@@ -33,7 +53,7 @@
   <div class="card">
     <img src="./img/Тур вихідного дня “Гостинність Чорнобаївки”.png" alt="first news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність
+      <h1 style="font-size: 15px"><a href="first.html" class="more-info">Тур вихідного дня "Гостинність
         Чорнобаївки</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Shape.png" class="img-favourite-and-share">
@@ -43,7 +63,7 @@
   <div class="card">
     <img src="./img/Дайвінг-тур Таємниці Зміїного.png" alt="second news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+      <h1 style="font-size: 15px"><a href="second.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
@@ -52,7 +72,7 @@
   <div class="card">
     <img src="./img/Сафарі-тур “Гадяцький”.png" alt="three news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+      <h1 style="font-size: 15px"><a href="three.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
@@ -61,7 +81,7 @@
   <div class="card">
     <img src="./img/Майстер-клас “Ромський”.png" alt="four news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
+      <h1 style="font-size: 15px"><a href="four.html" class="more-info">Майстер клас "Ромський"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
@@ -70,7 +90,7 @@
   <div class="card">
     <img src="./img/Київ за 3 дні.png" alt="five news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+      <h1 style="font-size: 15px"><a href="five.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Shape.png" class="img-favourite-and-share">
     </div>
