changing pictures and code

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
 
     <ul id="menu">
       <div class="menu-item">
-        <img src="img/zamovlenya.jpg" alt="Icon" class="icon">
+        <img src="img/cart.svg" alt="Icon" class="icon">
         <a href="#">Замовлення</a>
       </div>
       <div class="menu-item">
-        <img src="img/massage.jpg" alt="Icon" class="icon">
+        <img src="img/message.svg" alt="Icon" class="icon">
         <a href="#">Повідомлення</a>
       </div>
       <div class="menu-item">
-        <img src="img/Shape.jpg" alt="Icon" class="icon">
+        <img src="img/heart.svg" alt="Icon" class="icon">
         <a href="#">Улюблене</a> 
       </div>
       <div class="menu-item">
-        <img src="img/frends.jpg" alt="Icon" class="icon">
+        <img src="img/user-group.svg" alt="Icon" class="icon">
         <a href="#">Друзі</a>
       </div>
       <div class="menu-item">
-        <img src="img/emeils.jpg" alt="Icon" class="icon">
+        <img src="img/envelope.svg" alt="Icon" class="icon">
         <a href="#">Сповіщення</a>
       </div>
       <div class="menu-item">
-        <img src="img/settings.jpg" alt="Icon" class="icon">
+        <img src="img/gear.svg" alt="Icon" class="icon">
         <a href="#">Налаштування</a>
       </div>   
       </ul>
@@ -56,7 +56,7 @@
       <h1 style="font-size: 15px"><a href="first.html" class="more-info">Тур вихідного дня "Гостинність
         Чорнобаївки</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
-      <img src="./img/Shape.png" class="img-favourite-and-share">
+      <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
 
@@ -65,7 +65,7 @@
     <div class="content">
       <h1 style="font-size: 15px"><a href="second.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
-      <img src="./img/Shape.png" class="img-favourite-and-share">
+      <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
 
@@ -74,7 +74,7 @@
     <div class="content">
       <h1 style="font-size: 15px"><a href="three.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
-      <img src="./img/Shape.png" class="img-favourite-and-share">
+      <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
 
@@ -83,7 +83,7 @@
     <div class="content">
       <h1 style="font-size: 15px"><a href="four.html" class="more-info">Майстер клас "Ромський"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
-      <img src="./img/Shape.png" class="img-favourite-and-share">
+      <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
 
@@ -92,7 +92,7 @@
     <div class="content">
       <h1 style="font-size: 15px"><a href="five.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
-      <img src="./img/Shape.png" class="img-favourite-and-share">
+      <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
 </div>
