changes in the third tour of the weekend

--- a/first.html
+++ b/first.html
@@ -28,27 +28,20 @@
     </div>
   </div>
 
-  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit
-    inventore natus
-    repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
+  <p class="p-details">Chornobayivka, a small village in the south of Ukraine, is known not only for its history and strategic importance, but also for the hospitality of its residents. Guests are always welcome here: the local people are friendly and friendly. They willingly share their traditions, homemade dishes, including delicious borscht and dumplings, and are always ready to help those who pass through their lands. Despite modern challenges, the spirit of hospitality of Chornobayivka remains unchanged, making it a symbol of stability and warmth.</p>
 
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
       <img src="./img/Oleg.png" class="img-user">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum
-          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
-          necessitatibus
-          voluptatibus.</p>
+        <p class="text-comment">I visited Chornobayivka for the first time this year, and I was impressed by the hospitality of the local residents. We were warmly welcomed, offered homemade dishes, and the hosts told many interesting stories about the village. Despite recent events, people remain open and friendly. A real Ukrainian heart!</p>
       </div>
     </div>
     <div class="card-container">
       <img src="./img/Katya.png" class="img-user">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum</p>
+        <p class="text-comment">When I came to Chornobayivka to help with the humanitarian mission, the local residents not only helped us with logistics, but also invited us to their homes. They treated us to homemade dishes, shared everything they had. This is a true testimony of how the hospitality of Ukrainians lives even in the most difficult times.</p>
       </div>
     </div>
   </div>
