--- a/second.html
+++ b/second.html
@@ -32,18 +32,13 @@
     <div class="card-container">
       <img src="./img/Olga.png" class="img-user" alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum
-          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
-          necessitatibus
-          voluptatibus.</p>
+        <p class="text-comment">Snake Island is a real mystery of nature. It feels like you are at the edge of the world, and the atmosphere is filled with mystery. Heard from local fishermen interesting legends about treasures and strange phenomena that supposedly happen here. It is amazing that such a small island has such a rich history.</p>
       </div>
     </div>
     <div class="card-container">
       <img src="./img/Andrii.jpg" class="img-user"  alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum</p>
+        <p class="text-comment">Zmiiny is not just a picturesque place, but a real historical treasure. Legends about ancient civilizations and mysterious events add even more appeal to it. During the trip, I felt the special energy of this island, and its isolation exudes ancient magic. An ideal place for those who love mysterious places with deep roots.</p>
       </div>
     </div>
   </div>
