--- a/three.html
+++ b/three.html
@@ -8,44 +8,37 @@
 </head>
 <body>
 <nav class="app-bar">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  <a href="index.html" style="align-self: center"><img src="./img/Shape.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
-    Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  <img src="/img/settings.png" alt="button menu" style="width: 12px;
-  height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
+    Софарі тур "Гадяцький"</h1>
+  <img src="./img/3tochki.png" alt="button menu" style="width: 5px;
+  height: 16px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 <div class="main-info-details">
   <div class="card">
-    <img src="/img/3.png" alt="first news" class="img-detail">
+    <img src="./img/Сафарі-тур “Гадяцький”.png" alt="first news" class="img-detail">
     <div class="content-detail">
-      <img src="./img/favourite.png" class="img-favourite-details">
-      <img src="./img/share.png" class="img-share-details">
+      <img src="./img/favorite.png" class="img-favourite-details">
+      <img src="./img/Share.png" class="img-share-details">
     </div>
   </div>
 
-  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit
-    inventore natus
-    repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
+  <p class="p-details">Gadyach tour is an exciting trip to the picturesque city of Gadyach, in the Poltava region, rich in history and cultural heritage. Visitors can get acquainted with architectural monuments, ancient churches, historical museums and picturesque landscapes around the city. Gadyach is known as the center of cultural and political life during the Hetmanship, as well as the birthplace of prominent figures of Ukrainian history. The tour offers an opportunity to feel the spirit of ancient traditions and immerse yourself in the atmosphere of ancient Ukraine.</p>
 
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
-      <img src="img/user1.png" class="img-user">
+      <img src="./img/Maksim.jpg" class="img-user"  alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum
-          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
-          necessitatibus
-          voluptatibus.</p>
+        <p class="text-comment">The Gadiac tour exceeded all my expectations! The city is impressive with its history, and the picturesque scenery around is simply breathtaking. I especially liked the excursion to the places associated with the Cossack era. The feeling of being in the past of Ukraine!</p>
       </div>
     </div>
     <div class="card-container">
-      <img src="img/user2.png" class="img-user">
+      <img src="./img/Anatolii.jpg" class="img-user"  alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum</p>
+        <p class="text-comment">The trip to Gadyach was a real discovery! The architecture and historical sites are simply incredible. I learned a lot of interesting things about the history of hetmans, which you will not find in school textbooks. I recommend it to everyone who is interested in Ukrainian culture!</p>
       </div>
     </div>
   </div>
@@ -53,11 +46,11 @@
   <div>
     <h1>Наступна подія</h1>
     <div style="display: flex">
-      <img src="img/icon-date.png" class="icon-details">
+      <img src="./img/calendar.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 5px; text-decoration: none">15 травня 2022</a></p>
     </div>
     <div style="display: flex">
-      <img src="img/icon-people.png" class="icon-details">
+      <img src="./img/user-group.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 8px; text-decoration: none">Кількість місць необмежена</a></p>
     </div>
   </div>
