changes to the fourth page

--- a/four.html
+++ b/four.html
@@ -8,41 +8,35 @@
 </head>
 <body>
 <nav class="app-bar">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  <a href="index.html" style="align-self: center"><img src="./img/Shape.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
-    Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  <img src="/img/settings.png" alt="button menu" style="width: 12px;
-  height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
+    Майстер-клас “Ромський”</h1>
+  <img src="./img/3tochki.png" alt="button menu" style="width: 5px;
+  height: 16px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 <div class="main-info-details">
   <div class="card">
-    <img src="/img/4.png" alt="first news" class="img-detail">
+    <img src="./img/Майстер-клас “Ромський”.png" alt="first news" class="img-detail">
     <div class="content-detail">
-      <img src="./img/favourite.png" class="img-favourite-details">
-      <img src="./img/share.png" class="img-share-details">
+      <img src="./img/favorite.png" class="img-favourite-details">
+      <img src="./img/Share.png" class="img-share-details">
     </div>
   </div>
 
-  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit
-    inventore natus
-    repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
+  <p class="p-details">Master class "Roma" is an exciting event dedicated to Roma culture and traditions. Participants will be able to get acquainted with the art of Roma dances, music and crafts, as well as learn about the rich cultural heritage of the Roma people. The master class offers an opportunity not only to learn the basic dance movements, but also to immerse yourself in the bright world of Roma culture through interactive classes and live performances.</p>
 
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
-      <img src="img/user1.png" class="img-user">
+      <img src="./img/Maria.jpg" class="img-user"  alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum
-          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
-          necessitatibus
-          voluptatibus.</p>
+        <p class="text-comment">The "Romsky" master class was a real revelation! I learned the basic movements of Roma dances and felt the incredible energy of this culture. The atmosphere was warm and friendly, and the music was simply fantastic. Unforgettable impressions!</p>
       </div>
     </div>
     <div class="card-container">
-      <img src="img/user2.png" class="img-user">
+      <img src="./img/Anya.jpg" class="img-user"  alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
         <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
           eveniet explicabo, illum</p>
@@ -52,11 +46,11 @@
   <div>
     <h1>Наступна подія</h1>
     <div style="display: flex">
-      <img src="img/icon-date.png" class="icon-details">
+      <img src="./img/calendar.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 5px; text-decoration: none">15 травня 2022</a></p>
     </div>
     <div style="display: flex">
-      <img src="img/icon-people.png" class="icon-details">
+      <img src="./img/user-group.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 8px; text-decoration: none">Кількість місць необмежена</a></p>
     </div>
   </div>
