--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <img src="./img/Тур вихідного дня “Гостинність Чорнобаївки”.png" alt="first news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="first.html" class="more-info">Тур вихідного дня "Гостинність
-        Чорнобаївки</a></h1>
+        Чорнобаївки"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
@@ -63,7 +63,7 @@
   <div class="card">
     <img src="./img/Дайвінг-тур Таємниці Зміїного.png" alt="second news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="second.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+      <h1 style="font-size: 15px"><a href="second.html" class="more-info">Дайвінг-тур "Таємниці Зміїного"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
@@ -72,7 +72,7 @@
   <div class="card">
     <img src="./img/Сафарі-тур “Гадяцький”.png" alt="three news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="three.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+      <h1 style="font-size: 15px"><a href="three.html" class="more-info">Сафарі-тур "Гадяцький"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
