--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
   <a href="index.html" style="align-self: center"><img src="./img/Shape.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
-    Тур вихідного дня "Гостинність Чорнобаївки</h1>
+    Дайвінг-тур "Таємниці Зміїного"</h1>
   <img src="./img/3tochki.png" alt="button menu" style="width: 5px;
   height: 16px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
